--- a/index.html
+++ b/index.html
@@ -134,15 +134,54 @@ import { vec3, cos, sin, mat3, storage, tslFn, instanceIndex, timerLocal } from 
 			let analyserTexture;
 
 
+	
 	    const startButton = document.getElementById( 'startButton' );
 			startButton.addEventListener( 'click', function () {
-		init();
-			
-				//animate();
+const startButton2 = document.getElementById( 'startButton' );
+			startButton.addEventListener( 'click', init );
+				init();
+				animate();
 
 
 			} );
 
+			function init() {
+
+				const overlay = document.getElementById( 'overlay' );
+				overlay.remove();
+
+				const container = document.createElement( 'div' );
+				document.body.appendChild( container );
+//const camera = new THREE.PerspectiveCamera( 55, window.innerWidth / window.innerHeight, 0.1, 1000 );
+//camera.position.y = -4;
+//	const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+//renderer.domElement.id = 'cnv2';
+//		renderer.setClearColor( 0x00000 );
+//renderer.setSize( window.innerWidth, window.innerHeight );
+//document.body.append( renderer.domElement );
+		const listener = new THREE.AudioListener();
+
+				const audio = new THREE.Audio( listener );
+				const file = './j/music_box2.mp3';
+
+				if ( /(iPad|iPhone|iPod)/g.test( navigator.userAgent ) ) {
+
+					const loader = new THREE.AudioLoader();
+					loader.load( file, function ( buffer ) {
+
+						audio.setBuffer( buffer );
+						audio.play();
+
+					} );
+
+				} else {
+
+					const mediaElement = new Audio( file );
+					mediaElement.play();
+
+					audio.setMediaElementSource( mediaElement );
+
+				}
 
 		
 
