--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     width:100%;
     margin:0px;
     position: absolute;
-    z-index: 12;
+    z-index: 19;
   }
 #cnv2 {
   height:100vh;
@@ -338,9 +338,9 @@ const startButton2 = document.getElementById( 'startButton' );
 				renderer.render( scene, camera );
 
 			}
-		 let video = document.getElementById( 'video' );
-				video.play();
-				video.addEventListener( 'play', function () {
+	//	 let video = document.getElementById( 'video' );
+		//		video.play();
+		//		video.addEventListener( 'play', function () {
 
 					
 
@@ -357,10 +357,10 @@ const startButton2 = document.getElementById( 'startButton' );
 
 
  <canvas id="app"></canvas>   
-	<video id="video" autoplay mute loop src="./assets/3DGridCity.webm"></video>video
   <iframe id="ol"  title="logo" frameborder="0"  src="./ol.html"> </iframe> 
  </div>
-		</script>
+	 </div>
+  </script>
 
 
   </body>
