--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ margin-bottom:40%;
 
 
 	import * as THREE from "three";
-import { tslFn, uniform, storage, storageObject, instanceIndex, float, texture, viewportTopLeft, color } from '//unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js';
-import { vec3, cos, sin, mat3, storage, tslFn, instanceIndex, timerLocal } from 'three/nodes';
+import { tslFn, uniform, storageObject, instanceIndex, float, texture, viewportTopLeft, color, vec3, cos, sin, mat3, storage, tslFn, instanceIndex, timerLocal  } from '//unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js';
+
 
 			import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
 
