--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@ margin-bottom:40%;
 
 	import * as THREE from "three";
 import { tslFn, uniform, storageObject, instanceIndex, float, texture, viewportTopLeft, color, vec3, cos, sin, mat3, storage, tslFn, instanceIndex, timerLocal  } from '//unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js';
-
+import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
+			import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
+			import { BloomPass } from 'three/addons/postprocessing/BloomPass.js';
+			import { OutputPass } from 'three/addons/postprocessing/OutputPass.js';
 
 			import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
 
@@ -117,6 +120,17 @@ import { tslFn, uniform, storageObject, instanceIndex, float, texture, viewportT
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
 			import StorageBufferAttribute from 'three/addons/renderers/common/StorageBufferAttribute.js';
+let video, texture, material, mesh;
+
+			let composer;
+
+			let mouseX = 0;
+			let mouseY = 0;
+
+			let windowHalfX = window.innerWidth / 2;
+			let windowHalfY = window.innerHeight / 2;
+
+			let cube_count;
 
 			let camera, scene, renderer;
 			let computeUpdate;
@@ -349,7 +363,125 @@ const startButton2 = document.getElementById( 'startButton' );
 	this.currentTime = 3;
   	});
 
-		
+			// postprocessing
+
+				const renderPass = new RenderPass( scene, camera );
+				const bloomPass = new BloomPass( 1.3 );
+				const outputPass = new OutputPass();
+
+				composer = new EffectComposer( renderer );
+
+				composer.addPass( renderPass );
+				composer.addPass( bloomPass );
+				composer.addPass( outputPass );
+
+				//
+
+				window.addEventListener( 'resize', onWindowResize );
+
+			}
+
+			function onWindowResize() {
+
+				windowHalfX = window.innerWidth / 2;
+				windowHalfY = window.innerHeight / 2;
+
+				camera.aspect = window.innerWidth / window.innerHeight;
+				camera.updateProjectionMatrix();
+
+				renderer.setSize( window.innerWidth, window.innerHeight );
+				composer.setSize( window.innerWidth, window.innerHeight );
+
+			}
+
+			function change_uvs( geometry, unitx, unity, offsetx, offsety ) {
+
+				const uvs = geometry.attributes.uv.array;
+
+				for ( let i = 0; i < uvs.length; i += 2 ) {
+
+					uvs[ i ] = ( uvs[ i ] + offsetx ) * unitx;
+					uvs[ i + 1 ] = ( uvs[ i + 1 ] + offsety ) * unity;
+
+				}
+
+			}
+
+
+			function onDocumentMouseMove( event ) {
+
+				mouseX = ( event.clientX - windowHalfX );
+				mouseY = ( event.clientY - windowHalfY ) * 0.3;
+
+			}
+
+			//
+
+			function animate() {
+
+				requestAnimationFrame( animate );
+
+				render();
+
+			}
+
+			let h, counter = 1;
+
+			function render() {
+
+				const time = Date.now() * 0.00005;
+
+				camera.position.x += ( mouseX - camera.position.x ) * 0.05;
+				camera.position.y += ( - mouseY - camera.position.y ) * 0.05;
+
+				camera.lookAt( scene.position );
+
+				for ( let i = 0; i < cube_count; i ++ ) {
+
+					material = materials[ i ];
+
+					h = ( 360 * ( material.hue + time ) % 360 ) / 360;
+					material.color.setHSL( h, material.saturation, 0.5 );
+
+				}
+
+				if ( counter % 1000 > 200 ) {
+
+					for ( let i = 0; i < cube_count; i ++ ) {
+
+						mesh = meshes[ i ];
+
+						mesh.rotation.x += 10 * mesh.dx;
+						mesh.rotation.y += 10 * mesh.dy;
+
+						mesh.position.x -= 150 * mesh.dx;
+						mesh.position.y += 150 * mesh.dy;
+						mesh.position.z += 300 * mesh.dx;
+
+					}
+
+				}
+
+				if ( counter % 1000 === 0 ) {
+
+					for ( let i = 0; i < cube_count; i ++ ) {
+
+						mesh = meshes[ i ];
+
+						mesh.dx *= - 1;
+						mesh.dy *= - 1;
+
+					}
+
+				}
+
+				counter ++;
+
+				renderer.clear();
+				composer.render();
+
+			}
+
   </script>
 
   <div class="app4">
