--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@ import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
 			import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
 
 		
+import { pass, color, rangeFog } from 'three/nodes';
 
+			import { RGBELoader } from 'three/addons/loaders/RGBELoader.js';
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
 			import StorageBufferAttribute from 'three/addons/renderers/common/StorageBufferAttribute.js';
@@ -392,7 +394,82 @@ const startButton2 = document.getElementById( 'startButton' );
 					}
 
 				}
+// post processing
 
+				// render scene pass ( the same of css )
+				const scenePass = pass( scene, camera );
+				const scenePassViewZ = scenePass.getViewZNode();
+
+				// background color
+				const backgroundColor = color( 0x0066ff );
+
+				// get fog factor from scene pass context
+				// equivalent to: scene.fog = new THREE.Fog( 0x0066ff, 2.7, 4 );
+				const fogFactor = rangeFog( null, 2.7, 4 ).context( { getViewZ: () => scenePassViewZ } );
+
+				// tone mapping scene pass
+				const scenePassTM = scenePass.toneMapping( THREE.ACESFilmicToneMapping );
+
+				// mix fog from fog factor and background color
+				const compose = fogFactor.mix( scenePassTM, backgroundColor );
+
+				postProcessing = new PostProcessing( renderer );
+				postProcessing.outputNode = compose;
+
+				//
+
+				new RGBELoader()
+					.setPath( 'textures/equirectangular/' )
+					.load( 'royal_esplanade_1k.hdr', function ( texture ) {
+
+						texture.mapping = THREE.EquirectangularReflectionMapping;
+
+						scene.environment = texture;
+
+						// model
+
+						const loader = new GLTFLoader().setPath( 'models/gltf/DamagedHelmet/glTF/' );
+						loader.load( 'DamagedHelmet.gltf', function ( gltf ) {
+
+							scene.add( gltf.scene );
+
+							render();
+
+						} );
+
+					} );
+
+				//
+
+				const controls = new OrbitControls( camera, renderer.domElement );
+				controls.minDistance = 2;
+				controls.maxDistance = 5;
+				controls.target.set( 0, - 0.1, - 0.2 );
+				controls.update();
+				controls.addEventListener( 'change', render ); // use if there is no animation loop
+
+				window.addEventListener( 'resize', onWindowResize );
+
+			}
+
+			function onWindowResize() {
+
+				camera.aspect = window.innerWidth / window.innerHeight;
+				camera.updateProjectionMatrix();
+
+				renderer.setSize( window.innerWidth, window.innerHeight );
+
+				render();
+
+			}
+
+			//
+
+			function render() {
+
+				postProcessing.renderAsync();
+
+			}
 				counter ++;
 
 				renderer.render( scene, camera );
