--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ margin-bottom:40%;
 
 
 	import * as THREE from "three";
-import { tslFn, uniform, storageObject, instanceIndex, float, texture, viewportTopLeft, color, vec3, cos, sin, mat3, storage, tslFn, instanceIndex, timerLocal  } from '//unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js';
+import { tslFn, uniform, storageObject, instanceIndex, float, texture, viewportTopLeft, color, vec3, cos, sin, mat3, storage, instanceIndex, timerLocal  } from '//unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js';
 import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
 			import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
 			import { BloomPass } from 'three/addons/postprocessing/BloomPass.js';
