--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     position: absolute;
     z-index: 19;
   }
+	  #main_canvas {
+  height:100vh;
+    width:100%;
+    margin:0px;
+    position: absolute;
+    z-index: 16;
+    
+}
 #cnv2 {
   height:100vh;
     width:100%;
@@ -233,6 +241,7 @@ const startButton2 = document.getElementById( 'startButton' );
 
 				renderer = new WebGPURenderer( { alpha: true, antialias: true } );
 				renderer.setPixelRatio( window.devicePixelRatio );
+			renderer.domElement.id = 'main_ canvas';
 				renderer.setClearColor(0x00000);
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				renderer.setAnimationLoop( render );
