--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ const startButton2 = document.getElementById( 'startButton' );
 
   <div class="app4">
     
-<video id="video" src="Cube.webm" autoplay mute loop></video>
+<video id="video" src="./assets/Cube.webm" autoplay mute loop></video>
 
  <canvas id="app"></canvas>   
   <iframe id="ol"  title="logo" frameborder="0"  src="./ol.html"> </iframe> 
