--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
 			import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
 
 		
-import { pass, color, rangeFog } from 'three/nodes';
+import { pass, rangeFog } from 'three/nodes';
 
 			import { RGBELoader } from 'three/addons/loaders/RGBELoader.js';
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
