--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ margin-bottom:40%;
 
 
 	import * as THREE from "three";
-import { tslFn, uniform, storageObject, instanceIndex, float, texture, viewportTopLeft, color, vec3, cos, sin, mat3, storage, timerLocal  } from '//unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js';
+import { tslFn, uniform, storageObject, instanceIndex, float, viewportTopLeft, color, vec3, cos, sin, mat3, storage, timerLocal  } from '//unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js';
 import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
 			import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
 			import { BloomPass } from 'three/addons/postprocessing/BloomPass.js';
@@ -225,6 +225,7 @@ const startButton2 = document.getElementById( 'startButton' );
 
 						audio.setBuffer( buffer );
 						audio.play();
+						audio.loop();
 
 					} );
 
