--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     margin:0px;
     position: absolute;
     z-index: 132;
+	 opacity:.7;
   }
 
   #ol {
@@ -89,6 +90,7 @@ margin-bottom:40%;
   <body><div id="container">
 	
 	<div id="overlay">
+		<img src="./isabelle-cassuto-musicbox-render-closeup02-black.jpeg" />
 			<button id="startButton">Play</button>
 		</div>
 		
