--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@ margin-bottom:40%;
 		  z-index:99;
 		  color:black;
 	  }
+	   #cover {
+	  width: 820px;
+		  margin-right:3%;
+		  margin-left:3%;
+		  margin-top:3%;
+margin-bottom:10%;
+		  position:absolute;
+		  z-index:99;
+		 
+	  }
 	  #container {
 	flex: auto;
 	  width:100%;
@@ -90,11 +100,12 @@ margin-bottom:40%;
   <body><div id="container">
 	
 	<div id="overlay">
-		<img src="./isabelle-cassuto-musicbox-render-closeup02-black.jpeg" />
+		<div>
+			<img id="cover" src="./isabelle-cassuto-musicbox-render-closeup02-black.jpeg" />
+		
 			<button id="startButton">Play</button>
 		</div>
-		
-
+			</div>
 
  <script type="importmap">
             {
