--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@ let video, texture, material, mesh;
 			let analyserTexture;
 
 
+				const startButton = document.getElementById( 'startButton' );
 			startButton.addEventListener( 'click', function () {
-const startButton2 = document.getElementById( 'startButton' );
-			startButton.addEventListener( 'click', init );
+
 				init();
 				animate();
 
@@ -177,20 +177,7 @@ const startButton2 = document.getElementById( 'startButton' );
 			} );
 
 
-			function init() {
-
-				const overlay = document.getElementById( 'overlay' );
-				overlay.remove();
-
-				const container = document.createElement( 'div' );
-				document.body.appendChild( container );
-//const camera = new THREE.PerspectiveCamera( 55, window.innerWidth / window.innerHeight, 0.1, 1000 );
-//camera.position.y = -4;
-//	const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
-//renderer.domElement.id = 'cnv2';
-//		renderer.setClearColor( 0x00000 );
-//renderer.setSize( window.innerWidth, window.innerHeight );
-//document.body.append( renderer.domElement );
+		]
 	
 	
 
