--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@ margin-bottom:10%;
             {
             "imports": {
                 "three": "https://cdnjs.cloudflare.com/ajax/libs/three.js/0.164.1/three.module.js",
-                "OrbitControls": "https://unpkg.com/three@0.138.0/examples/jsm/controls/OrbitControls.js",
-	      "three/nodes": "https://unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js",
-	 "three/addons": "https://unpkg.com/three@0.163.0/examples/jsm/"
+                "OrbitControls": "https://unpkg.com/three@0.164.1/examples/jsm/controls/OrbitControls.js",
+	      "three/nodes": "https://unpkg.com/three@0.164.1/examples/jsm/nodes/Nodes.js",
+	 "three/addons": "https://unpkg.com/three@0.164.1/examples/jsm/"
            }
             }
           </script>
@@ -125,7 +125,7 @@ margin-bottom:10%;
 
 	import * as THREE from "three";
 import { tslFn, uniform, storageObject, instanceIndex, float, viewportTopLeft, color, vec3, cos, sin, mat3, storage, timerLocal  } from 'three/nodes';
-			import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
+			import { EffectComposer } from 'https://unpkg.com/three@0.164.1/examples/jsm/postprocessing/EffectComposer.js';
 			import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
 			import { BloomPass } from 'three/addons/postprocessing/BloomPass.js';
 			import { OutputPass } from 'three/addons/postprocessing/OutputPass.js';
