--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ import { tslFn, uniform, storageObject, instanceIndex, float, viewportTopLeft, c
 			import { OutputPass } from 'https://unpkg.com/three@0.164.1/examples/jsm/postprocessing/OutputPass.js';
 
 
-			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+			import { OrbitControls } from 'https://unpkg.com/three@0.164.1/examples/jsm/controls/OrbitControls.js';
 
-			import StorageBufferAttribute from 'three/addons/renderers/common/StorageBufferAttribute.js';
+			import StorageBufferAttribute from 'https://unpkg.com/three@0.164.1/examples/jsm/renderers/common/StorageBufferAttribute.js';
 let video, texture, material, mesh;
 
 			let composer;
