--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ let video, texture, material, mesh;
 
 				scene = new THREE.Scene();
 
-				const light = new THREE.DirectionalLight( 0xffffff, 7 );
+				const light = new THREE.DirectionalLight( 0xA92222, 7 );
 				light.position.set( 0.5, 1, 1 ).normalize();
 				scene.add( light );
 
@@ -267,8 +267,7 @@ let video, texture, material, mesh;
 	    	function animate() {
 
 				requestAnimationFrame( animate );
-
-				render();
+\
 
 			}
 
