--- a/index.html
+++ b/index.html
@@ -83,11 +83,9 @@ margin-bottom:40%;
 		  color:black;
 	  }
 	   #cover {
-	  width: 1620px;
-		  margin-right:3%;
-		  margin-left:3%;
-		  margin-top:3%;
-margin-bottom:10%;
+	  width: 100%;
+		   height:100vh;
+	margin:0;
 		  position:absolute;
 		  z-index:99;
 		    opacity:.7;
