--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ margin-bottom:35%;
 	
 	<div id="overlay">
 		<div>
-			<img id="cover" src="./isabelle-cassuto-musicbox-render-closeup02-black.jpeg" />
+			<img id="cover" src="./cover.png" />
 		
 			<button id="startButton">Play</button>
 		</div>
