--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@ const startButton2 = document.getElementById( 'startButton' );
 
 				const overlay = document.getElementById( 'overlay' );
 				overlay.remove();
-
+const scene = new THREE.Scene();
+scene.fog = new THREE.FogExp2( 0x00000, 0.002 );
 				const container = document.createElement( 'div' );
 				document.body.appendChild( container );
 const camera = new THREE.PerspectiveCamera( 55, window.innerWidth / window.innerHeight, 0.1, 1000 );
