--- a/index.html
+++ b/index.html
@@ -115,7 +115,59 @@ margin-bottom:45%;
   </style>
   </head>
   <body><div id="container">
-	
+	<!--
+Made with LUME
+http://github.com/lume/lume
+(Working towards an initial release!)
+-->
+<script src="//assets.codepen.io/191583/LUME.unversioned.7.js"></script>
+
+<!--
+ABOUT:
+This demo show how to make a camera rig for rotating a camera around an object.
+-->
+
+<!-- Polyfill for Pointer Events, for touch-action support below Safari 13 -->
+<script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+
+<lume-scene id="scene" perspective="800" webgl enable-css="false" touch-action="none">
+	<!-- Camera Rig -->
+	<lume-node id="controls" size="1 1 1" rotation="0 30 0" size-mode="proportional proportional proportional">
+		<lume-node id="xRotator" size="1 1 1" rotation="40 0 0" size-mode="proportional proportional proportional">
+			<lume-perspective-camera id="cam" active position="0 0 1000" align="0.5 0.5 0.5"></lume-perspective-camera>
+		</lume-node>
+	</lume-node>
+
+	<lume-node id="lights" align="0.5 0.5 0.5" rotation="0 30 0">
+		<lume-point-light color="yellow" position="500 0 0" intensity="1.3">
+			<lume-sphere has="basic-material" color="yellow" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
+		</lume-point-light>
+
+		<lume-point-light color="deeppink" position="-500 0 0" intensity="1.3">
+			<lume-sphere has="basic-material" color="deeppink" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
+		</lume-point-light>
+
+		<lume-point-light color="cyan" position="0 0 500" intensity="1.3">
+			<lume-sphere has="basic-material" color="cyan" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
+		</lume-point-light>
+
+		<lume-point-light color="limegreen" position="0 0 -500" intensity="1.3">
+			<lume-sphere has="basic-material" color="limegreen" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
+		</lume-point-light>
+
+		<lume-point-light color="white" position="0 -500 0" intensity="1.3">
+			<lume-sphere has="basic-material" color="white" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
+		</lume-point-light>
+
+		<lume-point-light color="white" position="0 250 0" intensity="1.3">
+			<lume-sphere has="basic-material" color="white" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
+		</lume-point-light>
+	</lume-node>
+
+	<lume-box id="box" color="black" size="200 200 200" align="0.5 0.5 0.5" mount-point="0.5 0.5 0.5"></lume-box>
+
+	<lume-plane color="black" size="2000 2000" rotation="90 0 0" align="0.5 0.5 0.5" mount-point="0.5 0.5 0.5" position="0 300 0"></lume-plane>
+</lume-scene>
 	<div id="overlay">
 			<button id="startButton">Play</button>
 		</div>
