--- a/index.html
+++ b/index.html
@@ -99,18 +99,8 @@ margin-bottom:45%;
 
   </style>
   </head>
-
   <body>
-	  
- <script type="importmap">
-            {
-              "imports": {
-             
-                "three/nodes": "https://unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js"
-             }
-            }
-          </script>
-
+  <body>
 	  <div id="container">
 	
 	<div id="overlay">
@@ -121,66 +111,25 @@ margin-bottom:45%;
 		</div>
 			</div>
 
-
-
-	<!--
-Made with LUME
-http://github.com/lume/lume
-(Working towards an initial release!)
--->
-<script src="//assets.codepen.io/191583/LUME.unversioned.7.js"></script>
-
-<!--
-ABOUT:
-This demo show how to make a camera rig for rotating a camera around an object.
--->
-
-<!-- Polyfill for Pointer Events, for touch-action support below Safari 13 -->
-<script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
-
-<lume-scene id="scene" perspective="800" webgl enable-css="false" touch-action="none">
-	<!-- Camera Rig -->
-	<lume-node id="controls" size="1 1 1" rotation="0 30 0" size-mode="proportional proportional proportional">
-		<lume-node id="xRotator" size="1 1 1" rotation="40 0 0" size-mode="proportional proportional proportional">
-			<lume-perspective-camera id="cam" active position="0 0 1000" align="0.5 0.5 0.5"></lume-perspective-camera>
-		</lume-node>
-	</lume-node>
-
-	<lume-node id="lights" align="0.5 0.5 0.5" rotation="0 30 0">
-		<lume-point-light color="yellow" position="500 0 0" intensity="1.3">
-			<lume-sphere has="basic-material" color="yellow" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
-		</lume-point-light>
-
-		<lume-point-light color="deeppink" position="-500 0 0" intensity="1.3">
-			<lume-sphere has="basic-material" color="deeppink" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
-		</lume-point-light>
-
-		<lume-point-light color="cyan" position="0 0 500" intensity="1.3">
-			<lume-sphere has="basic-material" color="cyan" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
-		</lume-point-light>
-
-		<lume-point-light color="limegreen" position="0 0 -500" intensity="1.3">
-			<lume-sphere has="basic-material" color="limegreen" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
-		</lume-point-light>
-
-		<lume-point-light color="white" position="0 -500 0" intensity="1.3">
-			<lume-sphere has="basic-material" color="white" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
-		</lume-point-light>
-
-		<lume-point-light color="white" position="0 250 0" intensity="1.3">
-			<lume-sphere has="basic-material" color="white" opacity="0.5" mount-point="0.5 0.5 0.5" size="10 10 10" cast-shadow="false" receive-shadow="false"></lume-sphere>
-		</lume-point-light>
-	</lume-node>
-
-	<lume-box id="box" color="black" size="200 200 200" align="0.5 0.5 0.5" mount-point="0.5 0.5 0.5"></lume-box>
-
-	<lume-plane color="black" size="2000 2000" rotation="90 0 0" align="0.5 0.5 0.5" mount-point="0.5 0.5 0.5" position="0 300 0"></lume-plane>
-</lume-scene>
+ <script type="importmap">
+  </style>
+  </head>
+  <body><div id="container">
+	
 	<div id="overlay">
 			<button id="startButton">Play</button>
 		</div>
 		
 
+
+ <script type="importmap">
+            {
+              "imports": {
+             
+                "three/nodes": "https://unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js"
+             }
+            }
+          </script>
 
 
     <script type="module">
@@ -197,54 +146,6 @@ const startButton2 = document.getElementById( 'startButton' );
 			} );
 
 			function init() {
-"use strict";
-{
-    // Make the default LUME 3D elements available with their default names.
-    LUME.useDefaultNames();
-    const minCamXRotation = -11;
-    const maxCamXRotation = 90;
-    // Add some interaction: drag to rotate the view:
-    scene.addEventListener("pointerdown", () => {
-        // Stop rotation if any.
-        controls.rotation = () => false;
-        let deltaX = 0;
-        let deltaY = 0;
-        const onMove = (event) => {
-            deltaX = event.movementY * 0.2;
-            xRotator.rotation.x = clamp(xRotator.rotation.x + deltaX, minCamXRotation, maxCamXRotation);
-            deltaY = -event.movementX * 0.2;
-            controls.rotation.y += deltaY;
-        };
-        scene.addEventListener("pointermove", onMove);
-        scene.addEventListener("pointerup", () => {
-            // stop dragging
-            scene.removeEventListener("pointermove", onMove);
-            if (deltaX === 0 && deltaY === 0)
-                return;
-            // slow the rotation down based on former drag speed
-            xRotator.rotation = (x, y, z) => {
-                deltaX = deltaX * 0.95;
-                // stop rotation once the delta is small enough that we
-                // no longer notice the rotation.
-                if (Math.abs(deltaX) < 0.01)
-                    return false;
-                return [clamp(x + deltaX, minCamXRotation, maxCamXRotation), y, z];
-            };
-            controls.rotation = (x, y, z) => {
-                deltaY = deltaY * 0.95;
-                // stop rotation once the delta is small enough that we
-                // no longer notice the rotation.
-                if (Math.abs(deltaY) < 0.01)
-                    return false;
-                return [x, y + deltaY, z];
-            };
-        }, { once: true });
-    });
-    function clamp(n, min, max) {
-        return Math.max(Math.min(n, max), min);
-    }
-    lights.rotation = (x, y, z) => [x, y + 0.2, z];
-}
 
 				const overlay = document.getElementById( 'overlay' );
 				overlay.remove();
