--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@ overflow:hidden;
     z-index: 16;
     
 }
+	#defaultCanvas0 {
+	height:100vh;
+    width:100%;
+    margin:0px;
+    position: absolute;
+    z-index: 10;
+		opacity:.8
+	}
 #cnv2 {
   height:100vh;
     width:100%;
