--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     
       <link rel="modulepreload" crossorigin="" href="./j/assets/math-utils-1c6b45c8.js">  
-	 <script type="module" crossorigin src="./j/three.module.js"></script>	 
+
 	  <link rel="stylesheet" href="./j/assets/math-utils-d0e09dec.css">  
 
  <style>
@@ -213,7 +213,7 @@ document.body.append( renderer.domElement );
   <div class="app4">
     
 
-<video id="video" src="assets/
+<video id="video" src="https://haawkeneuraltech.com/assets/3DGridCity.webm" autoplay mute loop></video>
  <canvas id="app"></canvas>   
 	
   <iframe id="ol"  title="logo" frameborder="0"  src="./ol.html"> </iframe> 
