--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Same camera example - three-projected-material</title>
   
-    <link rel="modulepreload" crossorigin href="./j/assets/math-utils-1c6b45c8.js">
+
   <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
   <style>
       html, body {
@@ -108,7 +108,7 @@ console.log('sound');
 
   <canvas class="app4" id="app1"></canvas>
  
-
+  <canvas class="app4" id="app"></canvas>
   <iframe id="iframe"  title="Musicbox" frameborder="0"  src="./index.html"> </iframe> </div>
 
 
